Added code to about.variety-of-cabins.cs files

--- a/partials/about.variety-of-cabins.partial.html
+++ b/partials/about.variety-of-cabins.partial.html
@@ -1,61 +1,107 @@
-<section>
-    <div>
-        <p>We have a children's playground with a number of swings and slides. Our spacious terrain is for you to relax
-            in the outdoors. You don't need to take food with you, as we offer a shop with the freshest local produce
-            including bakery and butchery. Our cafe is open 7 days a week from 9:30 for our famous free breakfasts, and
-            a diverse menu of lunches. Additionally, we offer a variety of cabins for you to choose from. Here are some
-            of them:</p>
-        <div>
-            <article>
-                <div>
-                    <img src="img/horse.jpg" alt="Horse">
-                </div>
-                <h3>Horse Ranch Cottage</h3>
-                <p>This private cottage is located within the Horse Ranch with a spacious
-                    fenced area. Explore a lot of tree-lined trails, see ranch animals and spectacular views.</p>
-            </article>
-            <article>
-                <div>
-                    <img src="img/tuolumne-meadows-lodge.jpg" alt="Tuolumne Meadows Lodge">
-                </div>
-                <h3>Tuolumne Meadows Lodge</h3>
-                <p>The Tuolumne Meadows Lodge offers 70 canvas-tent cabins for you to rent
-                    June to late August. This can be your best place to rest after an exhausting backpacking trip.</p>
-            </article>
-            <article>
-                <div>
-                    <img src="img/sunrise-vacation-rental.jpg" alt="Sunrise Vacation Rental">
-                </div>
-                <h3>Sunrise Vacation Rental</h3>
-                <p>This beautiful holiday home is waiting for you to stay in. This bright,
-                    clean, and modern home is located 29 miles from Yosemite National Park. It has new beds and
-                    furniture.</p>
-            </article>
-            <article>
-                <div>
-                    <img src="img/donya-marie's-cottage.jpg" alt="Donya Marie's Cottage">
-                </div>
-                <h3>Donya Marie's Cottage</h3>
-                <p>You have a perfect choice to combine your river rafting adventure with a
-                    visit to the park. Test our waters.</p>
-            </article>
-            <article>
-                <div>
-                    <img src="img/sierra-meadow-cottage.jpg" alt="Sierra Meadow Cottage">
-                </div>
-                <h3>Sierra Meadow Cottage</h3>
-                <p>Rent this cabin, located not far from Yosemite National Park, breathe the
-                    pure mountain air, drink the cleanest water, and enjoy thrilling sunset/sunrise views from the
-                    terrace.</p>
-            </article>
-            <article>
-                <div>
-                    <img src="img/yosemite’s-river-house.jpg" alt="Yosemite’s River House">
-                </div>
-                <h3>Yosemite’s River House</h3>
-                <p>The Yosemite’s River House offers a breathtaking view of the Merced River.
-                    This spectacular place will surely make you come back. Rent and enjoy your stay!</p>
-            </article>
+<section class="variety-of-cabins">
+    <div class="variety-of-cabins__inner">
+        <div class="container">
+            <div class="variety-of-cabins__subtitle-container">
+                <p class="variety-of-cabins__subtitle">We have a children's playground with a number of swings and
+                    slides.
+                    Our spacious terrain is for you to relax
+                    in the outdoors. You don't need to take food with you, as we offer a shop with the freshest local
+                    produce
+                    including bakery and butchery. Our cafe is open 7 days a week from 9:30 for our famous free
+                    breakfasts, and
+                    a diverse menu of lunches. Additionally, we offer a variety of cabins for you to choose from. Here
+                    are some
+                    of them:</p>
+            </div>
+            <div class="variety-of-cabins__cabins">
+                <article class="cabins__item">
+                    <div class="cabins__image-container">
+                        <img class="cabins__image" src="img/horse.jpg" alt="Horse">
+                    </div>
+                    <div class="cabins__title-container">
+                        <h3 class="cabins__title">Horse Ranch Cottage</h3>
+                    </div>
+                    <div class="cabins__description-container">
+                        <p class="cabins__description">This private cottage is located within the Horse Ranch with a
+                            spacious
+                            fenced area. Explore a lot of tree-lined trails, see ranch animals and spectacular views.
+                        </p>
+                    </div>
+                </article>
+                <article class="cabins__item">
+                    <div class="cabins__image-container">
+                        <img class="cabins__image" src="img/tuolumne-meadows-lodge.jpg" alt="Tuolumne Meadows Lodge">
+                    </div>
+                    <div class="cabins__title-container">
+                        <h3 class="cabins__title">Tuolumne Meadows Lodge</h3>
+                    </div>
+                    <div class="cabins__description-container">
+                        <p class="cabins__description">The Tuolumne Meadows Lodge offers 70 canvas-tent cabins for you
+                            to
+                            rent
+                            June to late August. This can be your best place to rest after an exhausting backpacking
+                            trip.
+                        </p>
+                    </div>
+                </article>
+                <article class="cabins__item">
+                    <div class="cabins__image-container">
+                        <img class="cabins__image" src="img/sunrise-vacation-rental.jpg" alt="Sunrise Vacation Rental">
+                    </div>
+                    <div class="cabins__title-container">
+                        <h3 class="cabins__title">Sunrise Vacation Rental</h3>
+                    </div>
+                    <div class="cabins__description-container">
+                        <p class="cabins__description">This beautiful holiday home is waiting for you to stay in. This
+                            bright,
+                            clean, and modern home is located 29 miles from Yosemite National Park. It has new beds and
+                            furniture.</p>
+                    </div>
+                </article>
+                <article class="cabins__item">
+                    <div class="cabins__image-container">
+                        <img class="cabins__image" src="img/donya-marie's-cottage.jpg" alt="Donya Marie's Cottage">
+                    </div>
+                    <div class="cabins__title-container">
+                        <h3 class="cabins__title">Donya Marie's Cottage</h3>
+                    </div>
+                    <div class="cabins__description-container">
+                        <p class="cabins__description">You have a perfect choice to combine your river rafting adventure
+                            with a
+                            visit to the park. Test our waters.</p>
+                    </div>
+                </article>
+                <article class="cabins__item">
+                    <div class="cabins__image-container">
+                        <img class="cabins__image" src="img/sierra-meadow-cottage.jpg" alt="Sierra Meadow Cottage">
+                    </div>
+                    <div class="cabins__title-container">
+                        <h3 class="cabins__title">Sierra Meadow Cottage</h3>
+                    </div>
+                    <div class="cabins__description-container">
+                        <p class="cabins__description">Rent this cabin, located not far from Yosemite National Park,
+                            breathe
+                            the
+                            pure mountain air, drink the cleanest water, and enjoy thrilling sunset/sunrise views from
+                            the
+                            terrace.</p>
+                    </div>
+                </article>
+                <article class="cabins__item">
+                    <div class="cabins__image-container">
+                        <img class="cabins__image" src="img/yosemite’s-river-house.jpg" alt="Yosemite’s River House">
+                    </div>
+                    <div class="cabins__title-container">
+                        <h3 class="cabins__title">Yosemite’s River House</h3>
+                    </div>
+                    <div class="cabins__description-container">
+                        <p class="cabins__description">The Yosemite’s River House offers a breathtaking view of the
+                            Merced
+                            River.
+                            This spectacular place will surely make you come back. Rent and enjoy your stay!</p>
+                    </div>
+                </article>
+            </div>
         </div>
     </div>
 </section>
