--- a/css/index.things-to-do.css
+++ b/css/index.things-to-do.css
@@ -56,7 +56,7 @@
     font-size: 20px;
     font-weight: bold;
     text-align: center;
-    margin-top: 5px;
+    margin-top: 5px;    
 }
 
 .cards__description{   
@@ -71,7 +71,8 @@
     text-align: center;
     position: relative;
     max-width: 100%;       
-    word-wrap: break-word;     
+    word-wrap: break-word;
+    line-height: 25.6px;     
 }
 
 .cards__item-image-container {
