--- a/css/contact-main-contact-us.css
+++ b/css/contact-main-contact-us.css
@@ -1,4 +1,4 @@
-.contacts_us {
+.contact_background {
     padding: 95px 0px;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/contacts_form_background.jpeg");
     background-position: center;
