--- a/css/about.season-activities.css
+++ b/css/about.season-activities.css
@@ -13,6 +13,7 @@
 }
 .cards-up__image-winter, .cards-low__image-summer{
     width: 100%;
+    height: 100%;
 }
 .season-activities__title {
     padding-top: 83px;
@@ -30,6 +31,7 @@
     border-radius: 10px;
     margin-top: 45px;
     margin-bottom: 54px;
+    padding-top: 5px;
 }
 .cards-low__image-summer-container {
     max-width: 720px;
@@ -47,7 +49,6 @@
 .cards-low__summer-vacation-title {
     font-size: 22px;
     font-weight: 500;
-    /* padding-top: 84px; */
     max-width: 289px;
     margin-bottom: 13px;
 }
@@ -63,7 +64,7 @@
 .list__item {
     display: flex;
     gap: 20px;
-    margin-bottom: 23px;
+    margin-bottom: 13px;
 }
 .list__item-last {
     margin-bottom: 84px;
@@ -90,7 +91,6 @@
         font-size: 44px;
     }
     .season-activities__cards {
-        /* margin-top: 49px; */
         display: flex;
         flex-direction: row;
         justify-content: center;
