--- a/css/policies.rental-policies.css
+++ b/css/policies.rental-policies.css
@@ -89,8 +89,8 @@
 
 .item__image {
     color: var(--title-color);
-    width: 26px;
-    height: 26px;
+    width: 30px;
+    height: 30px;
 }
 .item__description{
     max-width: 640px;
@@ -119,13 +119,14 @@
         flex-direction: row;
         gap: 30px;
     }
-    .rental-policies__items-item{
-        /* max-width: 525px; */
-    }
     .item__image-container {
         min-width: 70px;
         max-width: 70px;
         height: 70px;
+    }
+    .item__image {
+        width: 40px;
+        height: 40px;
     }
     .item__description{
         max-width: 480px;
