--- a/css/footer.css
+++ b/css/footer.css
@@ -114,6 +114,7 @@
         display: flex;
         flex: 1;
         flex-direction: column;
+        min-width: 113px;
     }
 
     .footer__ending {
