--- a/css/global.css
+++ b/css/global.css
@@ -12,6 +12,7 @@
      --icons-color: #599673;
      --title-color: #f98250;
      --background-color: #ffffff;
+     --background-color-zoom:rgba(0,0,0,0.4);
      --fields-border-color: #d0d0d0;
      --description-color: #848484;
      --rentals-description-color: #bdbdbd;
