--- a/partials/gallery-main-seasons.partial.html
+++ b/partials/gallery-main-seasons.partial.html
@@ -16,90 +16,247 @@
            <label for="fishing-btn">Fishing</label>
            <input type="radio" name="tab-btn" id="spa-btn" value="pictures-of-spa">
            <label for="spa-btn">SPA</label>
+
         <div id="summer" class="block_summer">
-            <figure class="picture-summer_house-on-the-mountain">
+            <button id="zoom-btn_summer-house-on-the-mountain" class="btn_summer-house-on-the-mountain">
                 <img class="gallery_img" src="img/summer-house-on-the-mountain.jpg" alt="House on the mountain">
-            </figure>
-            <figure class="picture-summer_horse">
+            </button>
+            <button id="zoom-btn_summer-horse" class="btn_summer-horse">
                 <img class="gallery_img" src="img/summer-horse.jpg" alt="Horse in summer">
-            </figure>
-            <figure class="picture-summer_lake">
+            </button>
+            <button id="zoom-btn_summer-lake" class="btn_summer-lake">
                 <img class="gallery_img" src="img/summer-lake.jpg" alt="Lake in summer">
-            </figure>
-            <figure class="picture-summer_house-interior">
+            </button>
+            <button id="zoom-btn_summer-house-interior" class="btn_summer-house-interior">
                 <img class="gallery_img" src="img/summer-house-interior.jpg" alt="House interior">
-            </figure>
-            <figure class="picture-summer_house-in-the-forest">
+            </button>
+            <button id="zoom-btn_summer-house-in-the-forest" class="btn_summer-house-in-the-forest">
                 <img class="gallery_img" src="img/summer-house-in-the-forest.jpg" alt="House in the forest">
-            </figure>
-            <figure class="picture-summer_house-with-flowers">
+            </button>
+            <button id="zoom-btn_summer-house-with-flowers" class="btn_summer-house-with-flowers">
                 <img class="gallery_img" src="img/summer-house-with-flowers.jpg" alt="House with flowers">
-            </figure>
+            </button>
         </div>
+
         <div id="winter" class="block_winter">
-            <figure class="winter-mountains">
+            <button id="zoom-btn_winter-mountains" class="btn_winter-mountains">
                 <img class="gallery_img" src="img/winter-mountains.jpg" alt="Mountains in winter">
-            </figure>
-            <figure class="picture-winter_skier">
+            </button>
+            <button id="zoom-btn_winter-skier" class="btn_winter-skier">
                 <img class="gallery_img" src="img/winter-skier.jpg" alt="Skier on the mount">
-            </figure>
-            <figure class="picture-winter_girl-with-coffee">
+            </button>
+            <button id="zoom-btn_winter-girl-with-coffee" class="btn_winter-girl-with-coffee">
                 <img class="gallery_img" src="img/winter-girl-with-coffee.jpg" alt="Girl with coffee">
-            </figure>
-            <figure class="picture-winter_house-by-the-lake">
+            </button>
+            <button id="zoom-btn_winter-house-by-the-lake" class="btn_winter-house-by-the-lake">
                 <img class="gallery_img" src="img/winter-house-by-the-lake.jpg" alt="House by the lake in winter">
-            </figure>
-            <figure class="picture-winter_horse">
+            </button>
+            <button id="zoom-btn_winter-horse" class="btn_winter-horse">
                 <img class="gallery_img" src="img/winter-horse.jpg" alt="Horse in winter">
-            </figure>
-            <figure class="picture-winter_houses-in-the-mountains">
+            </button>
+            <button id="zoom-btn_winter-houses-in-the-mountains" class="btn_winter-houses-in-the-mountains">
                 <img class="gallery_img" src="img/winter-houses-in-the-mountains.jpg" alt="Houses in the mountin in winter">
-            </figure>
+            </button>
         </div>
+
         <div id="spring" class="block_spring">
-            <figure class="picture-spring_house-on-the-mountain">
+            <button id="zoom-btn_spring-house-on-the-mountain" class="btn_spring-house-on-the-mountain">
                 <img class="gallery_img" src="img/spring-house-on-the-mountain.jpg" alt="House on the mountain in spring">
-            </figure>
-            <figure class="picture-spring_house-near-the-lake">
+              </button>
+            <button id="zoom-btn_spring-house-near-the-lake" class="btn_spring-house-near-the-lake">
                 <img class="gallery_img" src="img/spring-house-near-the-lake.jpg" alt="House near the lake in spring">
-            </figure>
-            <figure class="picture-spring_hous-in-the-forest">
+              </button>
+            <button id="zoom-btn_spring-hous-in-the-forest" class="btn_spring-hous-in-the-forest">
                 <img class="gallery_img" src="img/spring-hous-in-the-forest.jpg" alt="House in the forest in spring">
-            </figure>
+            </button>
         </div>
+
         <div id="autumn" class="block_autumn">
-            <figure class="picture-autumn_gray-house">
+            <button id="zoom-btn_autumn-gray-house" class="btn_autumn-gray-house">
                 <img class="gallery_img" src="img/autumn-gray-house.jpg" alt="gray house">
-            </figure>
-            <figure class="picture-autumn_house-in-the-forest">
+              </button>
+            <button id="zoom-btn_autumn-house-in-the-forest" class="btn_autumn-house-in-the-forest">
                 <img class="gallery_img" src="img/autumn-house-in-the-forest.jpg" alt="house in the forest in autumn">
-            </figure>  
-            <figure class="picture-autumn_girl-near-the-house">
+            </button>  
+            <button id="zoom-btn_autumn-girl-near-the-house" class="btn_autumn-girl-near-the-house">
                 <img class="gallery_img" src="img/autumn-girl-near-the-house.jpg" alt="girl near the house"> 
-            </figure>
+            </button>
          </div>
+
         <div id="fishing" class="block_fishing">
-            <figure class="picture-fishing_fisherman">
+            <button id="zoom-btn_fishing-fisherman" class="btn_fishing-fisherman">
                 <img class="gallery_img" src="img/fishing-fisherman.jpg" alt="fisherman">
-            </figure>
-            <figure class="picture-fishing_wooden-boat">
+            </button>
+            <button id="zoom-btn_fishing-wooden-boat" class="btn_fishing-wooden-boat">
                 <img class="gallery_img" src="img/fishing-wooden-boat.jpg" alt="wooden boat">
-            </figure>
-            <figure class="picture-fishing_red-boat">
+              </button>
+            <button id="zoom-btn_fishing-red-boat" class="btn_fishing-red-boat">
                 <img class="gallery_img" src="img/fishing-red-boat.jpg" alt="red boat">
-            </figure>
+            </button>
         </div>
+
         <div id="spa" class="block_spa">
-            <figure class="picture-spa_window">
+            <button id="zoom-btn_spa-window" class="btn_spa-window">
                 <img class="gallery_img" src="img/spa-window.jpg" alt="window in the spa room">
             </figure>
-            <figure class="picture-spa_bath">
+            <button id="zoom-btn_spa-bath" class="btn_spa-bath">
                 <img class="gallery_img" src="img/spa-bath.jpg" alt="bath for spa">
             </figure>
-            <figure class="picture-spa_terrace">
+            <button id="zoom-btn_spa-terrace" class="btn_spa-terrace">
                 <img class="gallery_img" src="img/spa-terrace.jpg" alt="terrace near the spa">
             </figure>
         </div>
+
+        <div id="modal_summer-house-on-the-mountain" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <img class="gallery_zoom-img" src="img/summer-house-on-the-mountain.jpg" alt="House on the mountain">
+            </div>
+          </div>
+          <div id="modal_summer-horse" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <img class="gallery_zoom-img" src="img/summer-horse.jpg" alt="Horse in summer">
+            </div>
+          </div>
+          <div id="modal_summer-lake" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <img class="gallery_zoom-img" src="img/summer-lake.jpg" alt="Lake in summer">
+            </div>
+          </div>
+          <div id="modal_summer-house-interior" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <img class="gallery_zoom-img" src="img/summer-house-interior.jpg" alt="House interior">
+            </div>
+          </div>
+          <div id="modal_summer-house-in-the-forest" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <img class="gallery_zoom-img" src="img/summer-house-in-the-forest.jpg" alt="House in the forest">
+            </div>
+          </div>
+          <div id="modal_summer-house-with-flowers" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <img class="gallery_zoom-img" src="img/summer-house-with-flowers.jpg" alt="House with flowers">
+            </div>
+          </div>
+
+          <div id="modal_winter-mountains" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <img class="gallery_zoom-img" src="img/winter-mountains.jpg" alt="Mountains in winter">
+            </div>
+          </div>
+          <div id="modal_winter-skier" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <img class="gallery_zoom-img" src="img/winter-skier.jpg" alt="Skier on the mount">
+            </div>
+          </div>
+          <div id="modal_winter-girl-with-coffee" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <img class="gallery_zoom-img" src="img/winter-girl-with-coffee.jpg" alt="Girl with coffee">
+            </div>
+          </div>
+          <div id="modal_winter-house-by-the-lake" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <img class="gallery_zoom-img" src="img/winter-house-by-the-lake.jpg" alt="House by the lake in winter">
+            </div>
+          </div>
+          <div id="modal_winter-horse" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <img class="gallery_zoom-img" src="img/winter-horse.jpg" alt="Horse in winter">
+            </div>
+          </div>
+          <div id="modal_winter-houses-in-the-mountains" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <img class="gallery_zoom-img" src="img/winter-houses-in-the-mountains.jpg" alt="Houses in the mountin in winter">
+            </div>
+          </div>
+
+          <div id="modal_spring-house-on-the-mountain" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <img class="gallery_zoom-img" src="img/spring-house-on-the-mountain.jpg" alt="House on the mountain in spring">
+            </div>
+          </div>
+          <div id="modal_spring-house-near-the-lake" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <img class="gallery_zoom-img" src="img/spring-house-near-the-lake.jpg" alt="House near the lake in spring">
+            </div>
+          </div>
+          <div id="modal_spring-hous-in-the-forest" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <img class="gallery_zoom-img" src="img/spring-hous-in-the-forest.jpg" alt="House in the forest in spring">
+            </div>
+          </div>
+
+          <div id="modal_autumn-gray-house" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <img class="gallery_zoom-img" src="img/autumn-gray-house.jpg" alt="gray house">
+            </div>
+          </div>
+          <div id="modal_autumn-house-in-the-forest" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <img class="gallery_zoom-img" src="img/autumn-house-in-the-forest.jpg" alt="house in the forest in autumn">
+            </div>
+          </div>
+          <div id="modal_autumn-girl-near-the-house" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <img class="gallery_zoom-img" src="img/autumn-girl-near-the-house.jpg" alt="girl near the house">
+            </div>
+          </div>
+
+          <div id="modal_fishing-fisherman" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <img class="gallery_zoom-img" src="img/fishing-fisherman.jpg" alt="fisherman">
+            </div>
+          </div>
+          <div id="modal_fishing-wooden-boat" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <img class="gallery_zoom-img" src="img/fishing-wooden-boat.jpg" alt="wooden boat">
+            </div>
+          </div>
+          <div id="modal_fishing-red-boat" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <img class="gallery_zoom-img" src="img/fishing-red-boat.jpg" alt="red boat">
+            </div>
+          </div>
+
+          <div id="modal_spa-window" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <img class="gallery_zoom-img" src="img/spa-window.jpg" alt="window in the spa room">
+            </div>
+          </div>
+          <div id="modal_spa-bath" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <img class="gallery_zoom-img" src="img/spa-bath.jpg" alt="bath for spa">
+            </div>
+          </div>
+          <div id="modal_spa-terrace" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <img class="gallery_zoom-img" src="img/spa-terrace.jpg" alt="terrace near the spa">
+            </div>
+          </div>
+
       </div>
     </div> 
   </section>
