--- a/partials/index-form.html
+++ b/partials/index-form.html
@@ -2,7 +2,7 @@
     <section class="reservation">
         <h2 class="reservation-title">Make a reservation</h2>
         <p class="reservation-description">Please complete the form below</p>
-        <form id="index-form-formspree" action="https://formspree.io/f/xqkveanv" method="POST" class="reservation-form">
+        <form id="reservation-form-formspree" action="https://formspree.io/f/xqkveanv" method="POST" class="reservation-form">
             <input type="text" name="name" placeholder="Name" class="reservation-input">
             <input type="text" name="phone-number" placeholder="Phone number" class="reservation-input">
             <input type="text" name="check-in-date" placeholder="Check in date" class="reservation-input">
