--- a/css/offer-main-cabin-rentals.css
+++ b/css/offer-main-cabin-rentals.css
@@ -56,10 +56,6 @@ h3 {
     padding: 10px;
 }
 
-.house-ofer-rooms-li {
-    list-style-image: url('img/bullet-icon.svg');
-}
-
 /* .bullet-icon {
     color: rgb(249, 130, 80);
     width: 20px;
@@ -76,4 +72,15 @@ h3 {
         max-width: 500px;
         max-height: 300px;
     }
+}
+.list__item-icon {
+    width: 20px;
+    height: 20px;
+    color: rgb(249, 130, 80);
+}
+.house-ofer-rooms-li{
+    display: flex;
+    gap: 20px;
+    margin-bottom: 13px;
+    
 }
