--- a/partials/offer-main.html
+++ b/partials/offer-main.html
@@ -7,9 +7,10 @@
                 <h3><span class="house-ofer-price">$65</span> /a night</h3>
                 <p>River Chalet</p>
                 <ul class="house-ofer-rooms">
-                    <li class="house-ofer-rooms-li">1 Bedroom</li>
-                    <li class="house-ofer-rooms-li">1 Bathroom</li>
-                    <li class="house-ofer-rooms-li">2 Sleeps</li>
+                    <li class="house-ofer-rooms-li"> <svg class="list__item-icon" viewBox="0 0 510 510"> <path d="M255 0C114.75 0 0 114.75 0 255s114.75 255 255 255 255-114.75 255-255S395.25 0 255 0zm-51 382.5L76.5 255l35.7-35.7 91.8 91.8 193.8-193.8 35.7 35.7L204 382.5z" style fill="currentColor"></path> </svg> 1 Bedroom </li>
+                    <li class="house-ofer-rooms-li"> <svg class="list__item-icon" viewbox="0 0 510 510"> <path d="M255 0C114.75 0 0 114.75 0 255s114.75 255 255 255 255-114.75 255-255S395.25 0 255 0zm-51 382.5L76.5 255l35.7-35.7 91.8 91.8 193.8-193.8 35.7 35.7L204 382.5z" style fill="currentcolor"></path> </svg> 1 Bathroom </li>
+                    <li class="house-ofer-rooms-li"> <svg class="list__item-icon" viewbox="0 0 510 510"> <path d="M255 0C114.75 0 0 114.75 0 255s114.75 255 255 255 255-114.75 255-255S395.25 0 255 0zm-51 382.5L76.5 255l35.7-35.7 91.8 91.8 193.8-193.8 35.7 35.7L204 382.5z" style fill="currentcolor"></path> </svg> 2 Sleeps </li>
+                    
                 </ul>
                 <div class="house-ofer-comfort">
                     <p>Jetted Tub</p>
@@ -28,9 +29,9 @@
                 <h3><span class="house-ofer-price">$75</span> /a night</h3>
                 <p>Lookout Lodge</p>
                 <ul class="house-ofer-rooms">
-                    <li class="house-ofer-rooms-li">2 Bedrooms</li>
-                    <li class="house-ofer-rooms-li">1 Bathroom</li>
-                    <li class="house-ofer-rooms-li">4 Sleeps</li>
+                    <li class="house-ofer-rooms-li"><svg class="list__item-icon" viewbox="0 0 510 510"> <path d="M255 0C114.75 0 0 114.75 0 255s114.75 255 255 255 255-114.75 255-255S395.25 0 255 0zm-51 382.5L76.5 255l35.7-35.7 91.8 91.8 193.8-193.8 35.7 35.7L204 382.5z" style fill="currentcolor"></path> </svg> 2 Bedrooms </li>
+                    <li class="house-ofer-rooms-li"><svg class="list__item-icon" viewbox="0 0 510 510"> <path d="M255 0C114.75 0 0 114.75 0 255s114.75 255 255 255 255-114.75 255-255S395.25 0 255 0zm-51 382.5L76.5 255l35.7-35.7 91.8 91.8 193.8-193.8 35.7 35.7L204 382.5z" style fill="currentcolor"></path> </svg> 1 Bathroom </li>
+                    <li class="house-ofer-rooms-li"><svg class="list__item-icon" viewbox="0 0 510 510"> <path d="M255 0C114.75 0 0 114.75 0 255s114.75 255 255 255 255-114.75 255-255S395.25 0 255 0zm-51 382.5L76.5 255l35.7-35.7 91.8 91.8 193.8-193.8 35.7 35.7L204 382.5z" style fill="currentcolor"></path> </svg> 4 Sleeps </li>
                 </ul>
                 <div class="house-ofer-comfort">
                     <p>Hot Tub</p>
@@ -49,9 +50,9 @@
                 <h3><span class="house-ofer-price">$85</span> /a night</h3>
                 <p>Lookout Lodge</p>
                 <ul class="house-ofer-rooms">
-                    <li class="house-ofer-rooms-li">2 Bedrooms</li>
-                    <li class="house-ofer-rooms-li">2 Bathroom</li>
-                    <li class="house-ofer-rooms-li">6 Sleeps</li>
+                    <li class="house-ofer-rooms-li"><svg class="list__item-icon" viewbox="0 0 510 510"> <path d="M255 0C114.75 0 0 114.75 0 255s114.75 255 255 255 255-114.75 255-255S395.25 0 255 0zm-51 382.5L76.5 255l35.7-35.7 91.8 91.8 193.8-193.8 35.7 35.7L204 382.5z" style fill="currentcolor"></path> </svg> 2 Bedrooms </li>
+                    <li class="house-ofer-rooms-li"><svg class="list__item-icon" viewbox="0 0 510 510"> <path d="M255 0C114.75 0 0 114.75 0 255s114.75 255 255 255 255-114.75 255-255S395.25 0 255 0zm-51 382.5L76.5 255l35.7-35.7 91.8 91.8 193.8-193.8 35.7 35.7L204 382.5z" style fill="currentcolor"></path> </svg> 2 Bathroom </li>
+                    <li class="house-ofer-rooms-li"><svg class="list__item-icon" viewbox="0 0 510 510"> <path d="M255 0C114.75 0 0 114.75 0 255s114.75 255 255 255 255-114.75 255-255S395.25 0 255 0zm-51 382.5L76.5 255l35.7-35.7 91.8 91.8 193.8-193.8 35.7 35.7L204 382.5z" style fill="currentcolor"></path> </svg> 6 Sleeps </li>
                 </ul>
                 <div class="house-ofer-comfort">
                     <p>Whirlpool Tub</p>
@@ -70,9 +71,9 @@
                 <h3><span class="house-ofer-price">$100</span> /a night</h3>
                 <p>Lookout Lodge</p>
                 <ul class="house-ofer-rooms">
-                    <li class="house-ofer-rooms-li">3 Bedrooms</li>
-                    <li class="house-ofer-rooms-li">2 Bathroom</li>
-                    <li class="house-ofer-rooms-li">8 Sleeps</li>
+                    <li class="house-ofer-rooms-li"><svg class="list__item-icon" viewbox="0 0 510 510"> <path d="M255 0C114.75 0 0 114.75 0 255s114.75 255 255 255 255-114.75 255-255S395.25 0 255 0zm-51 382.5L76.5 255l35.7-35.7 91.8 91.8 193.8-193.8 35.7 35.7L204 382.5z" style fill="currentcolor"></path> </svg> 3 Bedrooms </li>
+                    <li class="house-ofer-rooms-li"><svg class="list__item-icon" viewbox="0 0 510 510"> <path d="M255 0C114.75 0 0 114.75 0 255s114.75 255 255 255 255-114.75 255-255S395.25 0 255 0zm-51 382.5L76.5 255l35.7-35.7 91.8 91.8 193.8-193.8 35.7 35.7L204 382.5z" style fill="currentcolor"></path> </svg> 2 Bathroom </li>
+                    <li class="house-ofer-rooms-li"><svg class="list__item-icon" viewbox="0 0 510 510"> <path d="M255 0C114.75 0 0 114.75 0 255s114.75 255 255 255 255-114.75 255-255S395.25 0 255 0zm-51 382.5L76.5 255l35.7-35.7 91.8 91.8 193.8-193.8 35.7 35.7L204 382.5z" style fill="currentcolor"></path> </svg> 8 Sleeps </li>
                 </ul>
                 <div class="house-ofer-comfort">
                     <p>Whirlpool Tub</p>
@@ -91,9 +92,9 @@
                 <h3><span class="house-ofer-price">$150</span> /a night</h3>
                 <p>Lookout Lodge</p>
                 <ul class="house-ofer-rooms">
-                    <li class="house-ofer-rooms-li">3 Bedrooms</li>
-                    <li class="house-ofer-rooms-li">3 Bathroom</li>
-                    <li class="house-ofer-rooms-li">10 Sleeps</li>
+                    <li class="house-ofer-rooms-li"><svg class="list__item-icon" viewbox="0 0 510 510"> <path d="M255 0C114.75 0 0 114.75 0 255s114.75 255 255 255 255-114.75 255-255S395.25 0 255 0zm-51 382.5L76.5 255l35.7-35.7 91.8 91.8 193.8-193.8 35.7 35.7L204 382.5z" style fill="currentcolor"></path> </svg> 3 Bedrooms </li>
+                    <li class="house-ofer-rooms-li"><svg class="list__item-icon" viewbox="0 0 510 510"> <path d="M255 0C114.75 0 0 114.75 0 255s114.75 255 255 255 255-114.75 255-255S395.25 0 255 0zm-51 382.5L76.5 255l35.7-35.7 91.8 91.8 193.8-193.8 35.7 35.7L204 382.5z" style fill="currentcolor"></path> </svg> 3 Bathroom </li>
+                    <li class="house-ofer-rooms-li"><svg class="list__item-icon" viewbox="0 0 510 510"> <path d="M255 0C114.75 0 0 114.75 0 255s114.75 255 255 255 255-114.75 255-255S395.25 0 255 0zm-51 382.5L76.5 255l35.7-35.7 91.8 91.8 193.8-193.8 35.7 35.7L204 382.5z" style fill="currentcolor"></path> </svg> 10 Sleeps </li>
                 </ul>
                 <div class="house-ofer-comfort">
                     <p>Private Indoor Pool</p>
