added container class

--- a/partials/offer-main.html
+++ b/partials/offer-main.html
@@ -1,6 +1,6 @@
 <section>
     <h2 class="cabin-ofers-title">Cabin Rentals</h2>
-    <section class="cabin-ofers">
+    <section class="cabin-ofers container">
         <div class="cabin-ofer river-chalet-ofer">
             <img src="img/river-chalet-ofer.jpg" alt="river chalet photo" class="cabin-ofers-image">
             <article class="ofer-content">
