--- a/css/our-facilities.css
+++ b/css/our-facilities.css
@@ -1,4 +1,8 @@
 .our-facilities__text {
     color: black;
     text-align: center;
+    border: 1px solid black; 
+    padding: 10px; 
+    margin: 0; 
 }
+
