--- a/partials/offer-main.html
+++ b/partials/offer-main.html
@@ -117,7 +117,7 @@
             <input type="text" name="phone-number" placeholder="Phone number" class="reservation-input">
             <input type="text" name="check-in-date" placeholder="Check in date" class="reservation-input">
             <input type="text" name="check-out-date" placeholder="Check out date" class="reservation-input">
-                <select name="number-of-guests" aria-placeholder="Number of guests" class="reservation-select">
+                <select name="cabin" aria-placeholder="Cabin" class="reservation-select">
                     <option>Cabin clasic</option>
                     <option>Cabin superior</option>
                     <option>Cabin superior+</option>
