changed form action

--- a/partials/offer-main.html
+++ b/partials/offer-main.html
@@ -112,7 +112,7 @@
         <section class="reservation">
             <h2 class="reservation-title">Make a reservation</h2>
             <p class="reservation-description">Please complete the form below</p>
-            <form action="" method="" class="reservation-form" id="reservation-form-formspree">
+            <form action="https://formspree.io/f/xqkveanv" method="POST" class="reservation-form" id="reservation-form-formspree">
                 <input type="text" name="name" placeholder="Name" class="reservation-input">
             <input type="text" name="phone-number" placeholder="Phone number" class="reservation-input">
             <input type="text" name="check-in-date" placeholder="Check in date" class="reservation-input">
