updated css shop&cafe

--- a/partials/shop-and-cafe.partial.html
+++ b/partials/shop-and-cafe.partial.html
@@ -7,7 +7,7 @@
     <div class="shop__content">
         <article class="shop-card">
             <div class="shop-card__image-container">
-                <img width="530" src="img/tasty-breakfast.jpg" alt="Tasty breakfast" class="shop-card__image">
+                <img class="shop-card__image" width="530" src="img/tasty-breakfast.jpg" alt="Tasty breakfast" class="shop-card__image">
             </div>
             <h3 class="shop-card__title">Free Breakfast</h3>
             <p class="shop-card__text">We are known for our breakfasts, which we serve each day from 9:30 to 11:00.
@@ -16,7 +16,7 @@
         </article>
         <article class="shop-card">
             <div class="shop-card__image-container">
-                <img width="530" src="img/lunch-meat.jpg" alt="Meat on lunch " class="shop-card__image">
+                <img class="shop-card__image" width="530" src="img/lunch-meat.jpg" alt="Meat on lunch " class="shop-card__image">
             </div>
             <h3 class="shop-card__title">Lunch & Light Bites</h3>
             <p class="shop-card__text">We offer a wide range of starters, snacks, light bites, main courses, and
